--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
-        viewBinding true
+
+    viewBinding {
+        enabled = true
     }
 }
 
