--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
     viewBinding {
         enabled = true
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
